--- a/Scheduler/src/scheduler/SchedulerSimulation.fxml
+++ b/Scheduler/src/scheduler/SchedulerSimulation.fxml
@@ -39,7 +39,7 @@
                         <Group layoutX="33.0" layoutY="35.0">
                            <children>
                               <TextField disable="true" promptText="Time Slice" />
-                              <Button fx:id="startOutputSimulation_btn" layoutX="207.0" mnemonicParsing="false" onMouseClicked="#startOutputSimulationButton" prefHeight="31.0" prefWidth="88.0" text="Start" />
+                              <Button fx:id="startOutputSimulation_btn" layoutX="207.0" mnemonicParsing="false" onKeyPressed="#startOutputSimulationButton_KeyboardEvent" onMouseClicked="#startOutputSimulationButton_MouseEvent" prefHeight="31.0" prefWidth="88.0" text="Start" />
                            </children>
                         </Group>
                         <Group disable="true" layoutX="21.0" layoutY="106.0">
@@ -51,7 +51,7 @@
                               <Button layoutX="256.0" layoutY="37.0" mnemonicParsing="false" text="Stop" />
                            </children>
                         </Group>
-                        <Button fx:id="addProcess_btn" layoutX="31.0" layoutY="191.0" mnemonicParsing="false" onMouseClicked="#addNewProcessButton" prefHeight="31.0" prefWidth="140.0" text="Add new process" />
+                        <Button fx:id="addProcess_btn" layoutX="31.0" layoutY="191.0" mnemonicParsing="false" onKeyPressed="#addNewProcessButton_KeyboardEvent" onMouseClicked="#addNewProcessButton_MouseEvent" prefHeight="31.0" prefWidth="140.0" text="Add new process" />
                         <Button layoutX="203.0" layoutY="191.0" mnemonicParsing="false" prefHeight="31.0" prefWidth="124.0" text="Clear" />
                         <Button layoutX="105.0" layoutY="231.0" mnemonicParsing="false" text="Change Scheduler" />
                      </children>
