--- a/Scheduler/src/scheduler/SchedulerSimulation.fxml
+++ b/Scheduler/src/scheduler/SchedulerSimulation.fxml
@@ -36,9 +36,9 @@
                            </toggleGroup>
                         </RadioButton>
                         <RadioButton disable="true" layoutX="14.0" layoutY="84.0" mnemonicParsing="false" text="Real time Simulation" toggleGroup="$Simulation_Method" />
-                        <Group layoutX="33.0" layoutY="35.0">
+                        <Group fx:id="outputSimulationGroup" layoutX="33.0" layoutY="35.0">
                            <children>
-                              <TextField disable="true" promptText="Time Slice" />
+                              <TextField fx:id="timeSlice_textField" disable="true" promptText="Time Slice" />
                               <Button fx:id="startOutputSimulation_btn" layoutX="207.0" mnemonicParsing="false" onKeyPressed="#startOutputSimulationButton_KeyboardEvent" onMouseClicked="#startOutputSimulationButton_MouseEvent" prefHeight="31.0" prefWidth="88.0" text="Start" />
                            </children>
                         </Group>
@@ -52,15 +52,15 @@
                            </children>
                         </Group>
                         <Button fx:id="addProcess_btn" layoutX="31.0" layoutY="191.0" mnemonicParsing="false" onKeyPressed="#addNewProcessButton_KeyboardEvent" onMouseClicked="#addNewProcessButton_MouseEvent" prefHeight="31.0" prefWidth="140.0" text="Add new process" />
-                        <Button layoutX="203.0" layoutY="191.0" mnemonicParsing="false" prefHeight="31.0" prefWidth="124.0" text="Clear" />
-                        <Button layoutX="105.0" layoutY="231.0" mnemonicParsing="false" text="Change Scheduler" />
+                        <Button fx:id="clear_btn" layoutX="203.0" layoutY="191.0" mnemonicParsing="false" onKeyPressed="#clearButton_KeyboardEvent" onMouseClicked="#clearButton_MouseEvent" prefHeight="31.0" prefWidth="124.0" text="Clear" />
+                        <Button layoutX="105.0" layoutY="231.0" mnemonicParsing="false" onKeyPressed="#changeSchedulerButton_KeyboardEvent" onMouseClicked="#changeSchedulerButton_MouseEvent" text="Change Scheduler" />
                      </children>
                   </Pane>
                </children>
             </AnchorPane>
             <ScrollPane pannable="true" prefHeight="241.0" prefWidth="732.0" style="-fx-background: Black;">
                <content>
-                  <Canvas fx:id="canvas" height="243.0" width="749.0">
+                  <Canvas fx:id="canvas" height="265.0" width="749.0">
                      <cursor>
                         <Cursor fx:constant="HAND" />
                      </cursor></Canvas>
