--- a/Scheduler/src/scheduler/SchedulerSimulation.fxml
+++ b/Scheduler/src/scheduler/SchedulerSimulation.fxml
@@ -55,7 +55,7 @@
                            </children>
                         </Group>
                         <Button fx:id="addProcess_btn" layoutX="22.0" layoutY="193.0" mnemonicParsing="false" onKeyPressed="#addNewProcessButton_KeyboardEvent" onMouseClicked="#addNewProcessButton_MouseEvent" prefHeight="31.0" prefWidth="140.0" text="Add new process" />
-                        <Button layoutX="181.0" layoutY="193.0" mnemonicParsing="false" onKeyPressed="#loadFromFileButton_KeyboardEvent" onMouseClicked="#loadFromFileButton_MouseEvent" prefHeight="31.0" prefWidth="140.0" text="Load from file" />
+                        <Button fx:id="loadFromFile_btn" layoutX="181.0" layoutY="193.0" mnemonicParsing="false" onKeyPressed="#loadFromFileButton_KeyboardEvent" onMouseClicked="#loadFromFileButton_MouseEvent" prefHeight="31.0" prefWidth="140.0" text="Load from file" />
                         <Button fx:id="clear_btn" layoutX="22.0" layoutY="229.0" mnemonicParsing="false" onKeyPressed="#clearButton_KeyboardEvent" onMouseClicked="#clearButton_MouseEvent" prefHeight="31.0" prefWidth="140.0" text="Clear" />
                         <Button layoutX="181.0" layoutY="229.0" mnemonicParsing="false" onKeyPressed="#changeSchedulerButton_KeyboardEvent" onMouseClicked="#changeSchedulerButton_MouseEvent" text="Change Scheduler" />
                      </children>
