--- a/Scheduler/src/scheduler/SchedulerSimulation.fxml
+++ b/Scheduler/src/scheduler/SchedulerSimulation.fxml
@@ -4,6 +4,7 @@
 <?import javafx.scene.Group?>
 <?import javafx.scene.canvas.Canvas?>
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
 <?import javafx.scene.control.ScrollPane?>
 <?import javafx.scene.control.SplitPane?>
 <?import javafx.scene.control.TableColumn?>
@@ -27,19 +28,20 @@
                         <TableColumn fx:id="burstTimeColumn" editable="false" minWidth="1.0" prefWidth="110.0" text="Burst Time" />
                     </columns>
                   </TableView>
-                  <Pane layoutX="407.0" prefHeight="208.0" prefWidth="342.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+                  <Pane layoutX="407.0" prefHeight="238.0" prefWidth="342.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
                      <children>
-                        <Group fx:id="outputSimulationGroup" layoutX="22.0" layoutY="21.0">
+                        <Label fx:id="schedulerIndecation_label" layoutX="22.0" layoutY="14.0" />
+                        <Group fx:id="outputSimulationGroup" layoutX="22.0" layoutY="50.0">
                            <children>
-                              <TextField fx:id="timeSlice_textField" disable="true" promptText="Time Slice" />
-                              <Button fx:id="startOutputSimulation_btn" layoutX="207.0" mnemonicParsing="false" onKeyPressed="#startOutputSimulationButton_KeyboardEvent" onMouseClicked="#startOutputSimulationButton_MouseEvent" prefHeight="31.0" prefWidth="88.0" text="Start" />
+                              <TextField fx:id="timeSlice_textField" disable="true" prefHeight="31.0" prefWidth="194.0" promptText="Time Slice" />
+                              <Button fx:id="startOutputSimulation_btn" layoutX="213.0" layoutY="3.0" mnemonicParsing="false" onKeyPressed="#startOutputSimulationButton_KeyboardEvent" onMouseClicked="#startOutputSimulationButton_MouseEvent" prefHeight="31.0" prefWidth="88.0" text="Start" />
                            </children>
                         </Group>
-                        <Button fx:id="addProcess_btn" layoutX="22.0" layoutY="77.0" mnemonicParsing="false" onKeyPressed="#addNewProcessButton_KeyboardEvent" onMouseClicked="#addNewProcessButton_MouseEvent" prefHeight="31.0" prefWidth="140.0" text="Add new process" />
-                        <Button fx:id="loadFromFile_btn" layoutX="181.0" layoutY="77.0" mnemonicParsing="false" onKeyPressed="#loadFromFileButton_KeyboardEvent" onMouseClicked="#loadFromFileButton_MouseEvent" prefHeight="31.0" prefWidth="140.0" text="Load from file" />
-                        <Button fx:id="clear_btn" layoutX="22.0" layoutY="125.0" mnemonicParsing="false" onKeyPressed="#clearButton_KeyboardEvent" onMouseClicked="#clearButton_MouseEvent" prefHeight="31.0" prefWidth="140.0" text="Clear" />
-                        <Button fx:id="exportToFile_btn" layoutX="181.0" layoutY="125.0" mnemonicParsing="false" onKeyPressed="#exportToFileButton_KeyboardEvent" onMouseClicked="#eportToFileButton_MouseEvent" prefHeight="31.0" prefWidth="140.0" text="Export to file" />
-                        <Button layoutX="101.0" layoutY="170.0" mnemonicParsing="false" onKeyPressed="#changeSchedulerButton_KeyboardEvent" onMouseClicked="#changeSchedulerButton_MouseEvent" text="Change Scheduler" />
+                        <Button fx:id="addProcess_btn" layoutX="22.0" layoutY="101.0" mnemonicParsing="false" onKeyPressed="#addNewProcessButton_KeyboardEvent" onMouseClicked="#addNewProcessButton_MouseEvent" prefHeight="31.0" prefWidth="140.0" text="Add new process" />
+                        <Button fx:id="loadFromFile_btn" layoutX="181.0" layoutY="101.0" mnemonicParsing="false" onKeyPressed="#loadFromFileButton_KeyboardEvent" onMouseClicked="#loadFromFileButton_MouseEvent" prefHeight="31.0" prefWidth="140.0" text="Load from file" />
+                        <Button fx:id="clear_btn" layoutX="22.0" layoutY="149.0" mnemonicParsing="false" onKeyPressed="#clearButton_KeyboardEvent" onMouseClicked="#clearButton_MouseEvent" prefHeight="31.0" prefWidth="140.0" text="Clear" />
+                        <Button fx:id="exportToFile_btn" layoutX="181.0" layoutY="149.0" mnemonicParsing="false" onKeyPressed="#exportToFileButton_KeyboardEvent" onMouseClicked="#eportToFileButton_MouseEvent" prefHeight="31.0" prefWidth="140.0" text="Export to file" />
+                        <Button layoutX="101.0" layoutY="194.0" mnemonicParsing="false" onKeyPressed="#changeSchedulerButton_KeyboardEvent" onMouseClicked="#changeSchedulerButton_MouseEvent" text="Change Scheduler" />
                      </children>
                   </Pane>
                </children>
