--- a/Scheduler/src/scheduler/SchedulerSimulation.fxml
+++ b/Scheduler/src/scheduler/SchedulerSimulation.fxml
@@ -9,7 +9,9 @@
 <?import javafx.scene.control.TableView?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.Pane?>
+<?import javafx.scene.text.Font?>
 
 <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="540.0" prefWidth="751.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="scheduler.SchedulerSimulationController">
    <children>
@@ -42,6 +44,20 @@
                         <Button layoutX="101.0" layoutY="194.0" mnemonicParsing="false" onKeyPressed="#changeSchedulerButton_KeyboardEvent" onMouseClicked="#changeSchedulerButton_MouseEvent" text="Change Scheduler" />
                      </children>
                   </Pane>
+                  <HBox alignment="TOP_RIGHT" layoutX="690.0" layoutY="220.0" prefHeight="32.0" prefWidth="59.0" AnchorPane.bottomAnchor="0.0" AnchorPane.rightAnchor="0.0">
+                     <children>
+                        <Button maxHeight="32.0" maxWidth="32.0" minHeight="32.0" minWidth="32.0" mnemonicParsing="false" onMouseClicked="#zoomOut" prefHeight="32.0" prefWidth="32.0" text="-">
+                           <font>
+                              <Font name="System Bold" size="15.0" />
+                           </font>
+                        </Button>
+                        <Button maxHeight="32.0" maxWidth="32.0" minHeight="32.0" minWidth="32.0" mnemonicParsing="false" onMouseClicked="#zoomIn" prefHeight="32.0" prefWidth="32.0" text="+">
+                           <font>
+                              <Font name="System Bold" size="15.0" />
+                           </font>
+                        </Button>
+                     </children>
+                  </HBox>
                </children>
             </AnchorPane>
             <ScrollPane fx:id="scrollPane" pannable="true" prefHeight="241.0" prefWidth="732.0" style="-fx-background: Black;" />
