--- a/MemoryManagement/src/memorymanagement/MemorySimulation.fxml
+++ b/MemoryManagement/src/memorymanagement/MemorySimulation.fxml
@@ -8,7 +8,7 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.Pane?>
 
-<AnchorPane id="AnchorPane" prefHeight="540.0" prefWidth="776.0" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/8.0.171" fx:controller="memorymanagement.MemorySimulationController">
+<AnchorPane id="AnchorPane" prefHeight="540.0" prefWidth="776.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="memorymanagement.MemorySimulationController">
    <children>
       <SplitPane dividerPositions="0.5" layoutX="206.0" layoutY="66.0" prefHeight="539.0" prefWidth="761.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
         <items>
@@ -22,7 +22,7 @@
                   </TreeTableView>
                   <Pane layoutX="-29.0" layoutY="458.0" prefHeight="120.0" prefWidth="383.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0">
                      <children>
-                        <Button layoutX="32.0" layoutY="19.0" mnemonicParsing="false" text="Allocate Process" />
+                        <Button layoutX="32.0" layoutY="19.0" mnemonicParsing="false" onMouseClicked="#allocateProcess_mouseEvent" text="Allocate Process" />
                         <Button layoutX="75.0" layoutY="72.0" mnemonicParsing="false" text="Memory Hardware Configuration" />
                         <Button layoutX="227.0" layoutY="19.0" mnemonicParsing="false" prefHeight="31.0" prefWidth="128.0" text="Clear" />
                      </children>
