--- a/MemoryManagement/src/memorymanagement/MemoryInitialization.fxml
+++ b/MemoryManagement/src/memorymanagement/MemoryInitialization.fxml
@@ -6,55 +6,56 @@
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
 <?import javafx.scene.control.TextField?>
+<?import javafx.scene.control.TitledPane?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.ColumnConstraints?>
+<?import javafx.scene.layout.FlowPane?>
 <?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.RowConstraints?>
-<?import javafx.scene.text.Font?>
+<?import javafx.scene.layout.VBox?>
 
-
-<AnchorPane id="AnchorPane" prefHeight="552.0" prefWidth="600.0" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/8.0.171" fx:controller="memorymanagement.MemoryInitializationController">
+<AnchorPane id="AnchorPane" prefHeight="526.0" prefWidth="616.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="memorymanagement.MemoryInitializationController">
    <children>
-      <Label layoutX="183.0" layoutY="14.0" text="Memory Hardware Configuration">
-         <font>
-            <Font name="System Bold" size="15.0" />
-         </font>
-      </Label>
-      <GridPane alignment="CENTER" hgap="40.0" layoutX="40.0" layoutY="58.0" vgap="20.0" AnchorPane.leftAnchor="40.0" AnchorPane.rightAnchor="40.0">
-        <columnConstraints>
-          <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-          <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="10.0" />
-        </columnConstraints>
-        <rowConstraints>
-          <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-          <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-          <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-        </rowConstraints>
-         <children>
-            <Label text="Memory Total Size" />
-            <TextField fx:id="memoryTotalSize_txt" GridPane.columnIndex="1" />
-            <ChoiceBox fx:id="memoryTotalSizeUnit_choiceBox" prefWidth="150.0" GridPane.columnIndex="2" />
-            <Label text="OS Reserved Size" GridPane.rowIndex="1" />
-            <TextField fx:id="osReservedSize_txt" GridPane.columnIndex="1" GridPane.rowIndex="1" />
-            <ChoiceBox fx:id="osReservedSizeUnit_choiceBox" prefWidth="150.0" GridPane.columnIndex="2" GridPane.rowIndex="1" />
-            <Label text="Memory Alignment" GridPane.rowIndex="2" />
-            <ChoiceBox fx:id="memoryAlignment_choiceBox" prefHeight="31.0" prefWidth="200.0" GridPane.columnIndex="1" GridPane.rowIndex="2" />
-            <Label text="Allocation Method" GridPane.rowIndex="3" />
-            <ChoiceBox fx:id="AllocationMethod_choiceBox" prefHeight="31.0" prefWidth="200.0" GridPane.columnIndex="1" GridPane.rowIndex="3" />
-         </children>
-      </GridPane>
-      <TableView fx:id="memoryHolesTable" editable="true" layoutX="40.0" layoutY="280.0" prefHeight="200.0" prefWidth="381.0" AnchorPane.leftAnchor="40.0" AnchorPane.rightAnchor="192.0">
-        <columns>
-          <TableColumn minWidth="120.0" prefWidth="120.0" text="Base Address" />
-          <TableColumn minWidth="150.0" prefWidth="150.0" text="Limit" />
-            <TableColumn minWidth="100.0" prefWidth="100.0" text="Limit unit" />
-        </columns>
-      </TableView>
-      <Button layoutX="431.0" layoutY="365.0" mnemonicParsing="false" text="Add Memory Hole" />
-      <HBox alignment="CENTER" layoutY="496.0" spacing="200.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0">
+      <TitledPane collapsible="false" layoutX="40.0" layoutY="27.0" prefHeight="420.0" prefWidth="520.0" text="Memory Initialize" AnchorPane.leftAnchor="40.0" AnchorPane.rightAnchor="40.0">
+         <content>
+            <VBox prefHeight="241.0" prefWidth="518.0" spacing="20.0">
+               <children>
+                  <TableView fx:id="memoryHolesTable" prefHeight="200.0" prefWidth="520.0">
+                    <columns>
+                      <TableColumn editable="false" maxWidth="254.0" minWidth="254.0" prefWidth="254.0" resizable="false" text="Base Address" />
+                      <TableColumn editable="false" maxWidth="254.0" minWidth="254.0" prefWidth="254.0" resizable="false" text="Limit" />
+                    </columns>
+                  </TableView>
+                  <GridPane hgap="40.0" vgap="20.0">
+                    <columnConstraints>
+                      <ColumnConstraints hgrow="SOMETIMES" maxWidth="120.0" minWidth="120.0" prefWidth="120.0" />
+                      <ColumnConstraints hgrow="SOMETIMES" maxWidth="210.0" minWidth="210.0" prefWidth="210.0" />
+                        <ColumnConstraints hgrow="SOMETIMES" maxWidth="100.0" minWidth="100.0" prefWidth="100.0" />
+                    </columnConstraints>
+                    <rowConstraints>
+                      <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                      <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                    </rowConstraints>
+                     <children>
+                        <Label text="Base Address" />
+                        <TextField GridPane.columnIndex="1" />
+                        <Label text="Limit" GridPane.rowIndex="1" />
+                        <TextField GridPane.columnIndex="1" GridPane.rowIndex="1" />
+                        <ChoiceBox prefWidth="150.0" GridPane.columnIndex="2" GridPane.rowIndex="1" />
+                     </children>
+                  </GridPane>
+                  <FlowPane alignment="CENTER" columnHalignment="CENTER" hgap="200.0" prefHeight="31.0" prefWidth="200.0">
+                     <children>
+                        <Button mnemonicParsing="false" text="Add" />
+                        <Button mnemonicParsing="false" text="Cancel" />
+                     </children>
+                  </FlowPane>
+               </children>
+            </VBox>
+         </content>
+      </TitledPane>
+      <HBox alignment="CENTER" layoutY="470.0" spacing="200.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0">
          <children>
             <Button mnemonicParsing="false" text="Save" />
             <Button mnemonicParsing="false" text="Cancel" />
