--- a/MemoryManagement/src/memorymanagement/MemoryConfiguration.fxml
+++ b/MemoryManagement/src/memorymanagement/MemoryConfiguration.fxml
@@ -11,8 +11,7 @@
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.RowConstraints?>
 
-
-<AnchorPane id="AnchorPane" maxHeight="340.0" maxWidth="640.0" minHeight="340.0" minWidth="640.0" prefHeight="340.0" prefWidth="640.0" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/8.0.171" fx:controller="memorymanagement.MemoryConfigurationController">
+<AnchorPane id="AnchorPane" maxHeight="340.0" maxWidth="640.0" minHeight="340.0" minWidth="640.0" prefHeight="340.0" prefWidth="640.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="memorymanagement.MemoryConfigurationController">
    <children>
       <TitledPane collapsible="false" layoutX="32.0" layoutY="27.0" text="Hardware Configuration" AnchorPane.leftAnchor="40.0" AnchorPane.rightAnchor="40.0">
          <content>
