--- a/MemoryManagement/src/memorymanagement/MemoryInitialization.fxml
+++ b/MemoryManagement/src/memorymanagement/MemoryInitialization.fxml
@@ -17,7 +17,7 @@
 
 <AnchorPane id="AnchorPane" maxHeight="530.0" maxWidth="620.0" minHeight="530.0" minWidth="620.0" prefHeight="530.0" prefWidth="620.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="memorymanagement.MemoryInitializationController">
    <children>
-      <TitledPane collapsible="false" layoutX="40.0" layoutY="27.0" prefHeight="420.0" prefWidth="520.0" text="Memory Initialize" AnchorPane.leftAnchor="40.0" AnchorPane.rightAnchor="40.0">
+      <TitledPane collapsible="false" layoutX="40.0" layoutY="27.0" prefHeight="420.0" prefWidth="520.0" text="Memory Free Space Initialize" AnchorPane.leftAnchor="40.0" AnchorPane.rightAnchor="40.0">
          <content>
             <VBox prefHeight="241.0" prefWidth="518.0" spacing="20.0">
                <children>
